force-app/main/default/objects/ssot__FinancialCustomer__dlm/fields/ssot__CustomerServiceLevel__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustomerServiceLevel__c</fullName>
    <label>Customer Service Level</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustomerServiceLevel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>