force-app/main/default/objects/ssot__FinancialCustomer__dlm/fields/ssot__InvestmentExperienceLevel__c.field-meta.xml
<CustomField>
    <fullName>ssot__InvestmentExperienceLevel__c</fullName>
    <label>Investment Experience Level</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InvestmentExperienceLevel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>