force-app/main/default/objects/ssot__FinancialCustomer__dlm/fields/ssot__PolicyCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PolicyCount__c</fullName>
    <label>Policy Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PolicyCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>