force-app/main/default/objects/ssot__FinancialCustomer__dlm/fields/ssot__rel_1697761236658_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761236658_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FinancialCustomer_AccountId_map_Acco_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>FinancialCustomer_AccountId_map_Acco_rel</relationshipLabel>
    <relationshipName>rel_1697761236658_end</relationshipName>
    <type>Lookup</type>
</CustomField>